--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=codelinkdauodaynha" />
-<p><a href="codelinkdauodaynha"> new881.me </a></p>
+<meta http-equiv="refresh" content="0; url=https://www.new88ww.com/?uagt=newb01a01&path=signup" />
+<p><a href="https://www.new88ww.com/?uagt=newb01a01&path=signup"> new881.me </a></p>
